# printprob-db

./: .gitignore  .template.env  Dockerfile  Makefile  README.md  SERVICES_README.md  default.conf  docker-compose.yml  package-lock.json  package.json  vue.config.js
app/: .coveragerc  (+1 more)
rest/: .flake8  .gitignore  Dockerfile  README.database.md  pyproject.toml  requirements.txt
rest/app/: requirements.txt
rest/app/pp/: documents.py  models.py  serializers.py  static_serializers.py  urls.py  util.py  views.py
rest/app/pp/fixtures/: test.json
rest/app/pp/manifest/: generate_iiif_manifest.py
rest/app/pp/matches/: find_matching_chars.py  save_matching_chars.py
rest/app/pp/migrations/: 0002_auto_20191013_1241.py  0006_auto_20191108_1208.py  0007_auto_20191108_1434.py  0008_auto_20191108_1513.py  0012_book_zipfile.py  0013_auto_20191225_1740.py  0014_auto_20191231_2030.py  0015_auto_20200107_0852.py  0016_auto_20200107_1121.py  0017_book_prefix.py  0018_characterclass_group.py  0019_auto_20200303_1218.py  0020_auto_20200303_1231.py  0021_book_n_spreads.py  0022_page_sequence.py  0023_auto_20200603_1528.py  0024_auto_20200603_1548.py  0025_auto_20200603_1558.py  0026_auto_20200629_1644.py  0027_auto_20200916_0935.py  0028_auto_20200916_1246.py  0029_auto_20200916_1254.py  0030_auto_20200916_1255.py  0031_auto_20200923_1541.py  0032_auto_20200924_1046.py  0033_book_pp_author.py  0034_auto_20200924_1109.py  0035_auto_20200924_1655.py  0036_auto_20200925_0909.py  0037_auto_20200926_1739.py  0038_book_repository.py  0039_auto_20201216_0932.py  0040_book_colloq_printer.py  0041_auto_20210104_1343.py  (+9 more)
rest/app/web/: settings.py  urls.py  wsgi.py
rest/src/: README.md  bl_allbooks.sh  bl_dl.py  bridges_copy.sh  bulk_load_json.py  eebo_unzip_loop.sh  harvest_bl.py  load_book_json.py  uz.sh  vid_ocr_intersect.py
(+170 files in other folders)
